--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@ To minimize the amount of HTTP requests combine all CSS files into one single fi
             <nav>
             	<h2 class="hidden">Minha navegação</h2>
                 <ul>
-                    <li><a href="javascript:void(0)">Home</a></li>
-                    <li><a href="javascript:void(0)">Porfolio</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="portfolio.html">Porfolio</a></li>
                     <li><a href="javascript:void(0)">About</a></li>
                     <li><a href="javascript:void(0)">Contact</a></li>
                 </ul>
